Add twitter card

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@r_lending">
+    <meta name="twitter:creator" content="@r_lending">
+    <meta name="twitter:title" content="rLending">
+    <meta name="twitter:description" content="rLending is a decentralized investment and finance (DEFI) platform that allows users to invest in a safe way.">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/riflending/rlending-ui/dev/src/assets/rlending.png">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>rLending</title>
   </head>
